# kindergarten

./: .gitignore  CMakeLists.template  CMakeLists.txt  LICENSE  README.md  kindergarten.rc  publish.ps1
Journey/: log#0.md
Misc/: Windows下使用共享内存实现IPC.cpp  Windows下使用管道实现IPC.cpp  os对二进制可执行文件读取到ram的区域划分.cpp  shellcode使用VirtualAlloc执行内存中的机器码.cpp  从OpenMP并行到thread的cpp多线程入门演示.cpp  从二进制可执行文件部分结构到运行时ram布局和使用dos头pe头可选头定位程序入口.cpp  优先队列.cpp  使用DFA匹配邮箱字符串模板.cpp  像clion内置的memory_view一样的控制台输出模板.cpp  关于windows虚拟的鼠标和键盘输入输出的一点探索和软件宏的必要的可行性测试.cpp  关于动态规划Dynamic Programming的一点了解和一个失败的尝试.cpp  在指定内存片区生成对象与虚析构器的析构过程中的vptr改写.cpp  在没有对象的情况下使用函数指针调用非静态成员函数.cpp  对于qq的可能认识的人与无向图结构的一些思考.cpp  执行时长模板.cpp  生产者消费者.cpp  用函数指针执行虚函数表中的虚函数.cpp  由shuffle引起的关于random的一点思考和一个事件队列发生器.cpp  自定义exception且继承自stdexception和异常处理的一些小细节.cpp  链表环路检测与相关操作.cpp
Misc/MouseTrail_过程文件/: CMakeLists.txt  main.cpp
Misc/SDL3相关/: 读取一张png到窗口显示.cpp  赛博光电开关.cpp
Misc/cpp比较基础的内容/: accumulate和reduce以及一些关于lambda的拓展.cpp  bit_cast.cpp  constexpr的一点相关内容.cpp  filesystem相关内容与部分fstream内容.cpp  format&print相关内容.cpp  int溢出检验.cpp  invoke和inline的一点奇思妙想.cpp  mutable及衍生出的关于lambda的探索.cpp  promise&future相关内容.cpp  rtti的常用方式初尝试(typeid,dynamic_cast).cpp  type_traits浅尝decltype和auto的区别、变量模板和if constexpr.cpp  volatile的用法相关嵌入式和多线程.cpp  不要在构造器和析构器里面使用虚函数.cpp  以union为基础的一些用法探索.cpp  关于enum和struct的bit-level用法的一点尝试.cpp  关于exit()和terminate().cpp  关于智能指针工作原理的一点探索.cpp  基类的纯虚析构器必须要定义.cpp  完美转发是什么.cpp  对象切片的弊端与解决方案.cpp  对象切片的弊端的利用.cpp  对象构造过程以及虚基类.cpp  数组指针退化.cpp  有关视图views的一点简略使用.cpp  深拷贝浅拷贝.cpp  类的特殊成员(=default=delete)拷贝移动构造器和操作符重载以及相关类特性.cpp  闭包closure和lambda.cpp
Misc/shameful_cheater/: osu_mania_4k_cheater.cpp  osu_mania_7k_cheater.cpp
Misc/将exe读进内存然后执行指定位置的函数/: magic.cpp  target_super_easy.cpp
Misc/序列化和反序列化和存档设计以及hash校验的思考/: CMakeLists.txt  gameSave.cpp  gameSave.h  this_part_main.cpp
Misc/设计规范/: 接口类的设计.cpp
Template/: 奇异递归模板模式CRTP.cpp
TemplateChallenge/: kit.h
another_moonlight/: git设置.txt
